# WebXO

./: .dockerignore  .gitignore  CMakeLists.txt  CheckList.md  Dockerfile  Dockerfile.cmake  Dockerfile.demo  Dockerfile.exec  Dockerfile.sandbox  Dockerfile.tiny  INSTALL.sh  Makefile  README.md  TODO.md  azure-pipelines.yml  buildspec.yml  exec.sh  makeDocker_env.sh  makefile  run.sh  vhosts.txt
.devcontainer/: Dockerfile  config.sh  devcontainer.json
ErrorPages/: 404.html
ExampleSite/: 204.html  500.html  index.html  local.html  requests.html
ExampleSite/Blog/: cool.html
ExampleSite/FTP/: test.html
ExampleSite/HTTPSuite/: index.html
ExampleSite/js/: test.js
ExampleSite/test/: index.html
ExampleSite/test/js/: test.js
ExampleSite/test/sub/: index.html
Examples/: CMakeLists.txt
Examples/InterceptThis/: CMakeLists.txt  server.cpp  socket2node.cpp  socket2node.hpp
Examples/InterceptThis/NodeJS/: server.js
Tests/: CMakeLists.txt  Compression.test.cpp  Dockerfile  FolderView.test.cpp  HTTP.test.cpp  HTTPHeaders.test.cpp  IO.test.cpp  Interception.test.cpp  Makefile  Makefile.old  Readme.md  VirtualHosts.test.cpp
Tests/HTTPSuite/: Tests.json
Tests/assets/: deflateME.txt  deflateME.txt.zz  vhosts.txt
gzip/: readme.txt  sample.html
src/: pMain.cpp
src/WebXLib/: Common.hpp  Compression.cpp  Compression.hpp  Directory.cpp  Directory.hpp  FolderView.cpp  FolderView.hpp  HTTP.cpp  HTTP.hpp  HTTPHeaders.hpp  HTTPMethodTypes.hpp  HTTPStatusCodes.hpp  IO.hpp  Interception.cpp  Interception.hpp  Logarithm.cpp  Logarithm.hpp  Memory.cpp  Memory.hpp  Sockets.cpp  Sockets.hpp  TLS.cpp  TLS.hpp  Threading.cpp  Threading.hpp  VirtualHosts.cpp  VirtualHosts.hpp
